--- a/templates/app/article_update.html
+++ b/templates/app/article_update.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Article</title>
-</head>
-<body>
+{% extends "app/base.html" %}
+{% block content %}
 <h1>Update Article</h1>
+<p>Last updated on {{ articles.updated_at | date:"jS F Y"}}</p>
 <form method="POST">
     {% csrf_token %}
     {{form.as_p }}
     <button type="submit">Save</button>
 </form>
 
-</body>
-</html>
+{% endblock content %}
