--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Article</title>
-</head>
-<body>
+{% extends "app/base.html" %}
+{% block content %}
 <h1>Create Article</h1>
 <form method="POST">
     {% csrf_token %}
     {{form.as_p }}
     <button type="submit">Save</button>
 </form>
+{% endblock content %}
 
-</body>
-</html>
