different redirection added inside the templates

--- a/templates/app/article_update.html
+++ b/templates/app/article_update.html
@@ -7,5 +7,6 @@
     {{form.as_p }}
     <button type="submit">Save</button>
 </form>
-
+<a href="{% url 'home' %}"> Back to list</a>
+<a href="{% url 'delete_article' pk=articles.id %}"> Delete Article</a>
 {% endblock content %}
