--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -3,9 +3,11 @@
 <h1>
     Article
 </h1>
+<a href="{% url 'create_article' %}">Create Article</a>
+
 <ul>
     {% for article in articles %}
-    <li>{{ article.title}} with {{article.word_count }} words.</li>
+    <li><a href="{% url 'update_article' pk=article.id %}">{{ article.title}}</a> with {{article.word_count }} words.</li>
     {% endfor %}
 </ul>
 {% endblock content %}
