--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -7,7 +7,8 @@
 {% if articles %}
 <ul>
     {% for article in articles %}
-    <li><a href="{% url 'update_article' pk=article.id %}">{{ article.title}}</a> with {{article.word_count }} words.
+    <li><a href="{% url 'update_article' pk=article.id %}">{{ article.title}}</a> with {{article.word_count }}
+        word{{article.word_count | pluralize}}.
     </li>
     {% endfor %}
 </ul>
