--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -6,7 +6,21 @@
     <title>DjangoArticle</title>
 </head>
 <body>
-<nav>common navigation for all templates</nav>
+<nav>
+    <ul>
+        <li><a href="{% url 'home' %}"> Articles</a></li>
+        <li>
+            {% if user.is_authenticated %}
+            <form method="POST" action="{% url 'account_logout' %}">
+                {% csrf_token %}
+                <button type="submit"> Logout</button>
+            </form>
+            {% else %}
+            <a href="{% url 'account_login' %}">Log in</a>
+            {% endif %}
+        </li>
+    </ul>
+</nav>
 {% block content %}
 
 {% endblock content %}
