--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,8 +1,13 @@
 {% extends "app/base.html" %}
+{% load humanize %}
 {% block content %}
 <h1>
     Article
 </h1>
+<p>
+    You have created {{ user.article_count | intcomma }} article{{user.article_count | pluralize }} and written
+    {{user.written_words | intcomma }} word{{user.written_words | pluralize }}
+</p>
 <a href="{% url 'create_article' %}">Create Article</a>
 {% if articles %}
 <ul>
