--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DjangoArticle</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 </head>
 <body>
 <nav>
@@ -25,6 +27,10 @@
 
 {% endblock content %}
 <footer>Common footer for all templates</footer>
+
+{% block page_js %}
+
+{% endblock page_js %}
 
 </body>
 </html>
