--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -10,3 +10,14 @@
 <a href="{% url 'home' %}"> Back to list</a>
 {% endblock content %}
 
+{% block page_js %}
+<script>
+    const contentMarkdown = new EasyMDE({
+    element: document.getElementById("id_content"),
+    spellChecker: false,
+    status: false,
+    toolbar: false,
+    forceSync: true
+    });
+</script>
+{% endblock page_js %}
