--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -1,4 +1,4 @@
-{% extends "app/base.html" %}
+{% extends "app/layouts/base_form.html" %}
 {% block content %}
 <h1>Create Article</h1>
 <form method="POST">
@@ -10,14 +10,4 @@
 <a href="{% url 'home' %}"> Back to list</a>
 {% endblock content %}
 
-{% block page_js %}
-<script>
-    const contentMarkdown = new EasyMDE({
-    element: document.getElementById("id_content"),
-    spellChecker: false,
-    status: false,
-    toolbar: false,
-    forceSync: true
-    });
-</script>
-{% endblock page_js %}
+
