--- a/static/input.css
+++ b/static/input.css
@@ -1,1 +1,19 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.button {
+    @apply font-medium px-4  py-2 rounded-md;
+}
+
+.primary {
+    @apply rounded-xl border-emerald-700 bg-emerald-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-emerald-700 focus:outline-hidden focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2
+}
+
+.secondary {
+    @apply rounded-xl border-gray-300 bg-gray-100 px-4 py-2 font-medium text-gray-700 hover:bg-gray-200 focus:outline-hidden focus:ring-2 focus:ring-gray-500 focus:ring-offset-2
+}
+
+.danger {
+    @apply rounded-xl border border-red-400 bg-red-200 px-4 py-2 font-medium text-red-800 shadow-sm hover:bg-red-300 focus:outline-hidden focus:ring-red-200 focus:ring-offset-2
+}
