--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -11,20 +11,21 @@
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="{% url 'home' %}"> Articles</a></li>
-        <li>
+<nav class="px-10 py-4 border-b border-gray-300 shadow-md">
+    <div>
             {% if user.is_authenticated %}
+            <a class="button primary" href="{% url 'create_article' %}">Create new</a>
+            <a class="hover:underline" href="{% url 'home' %}">Article</a>
+            <a class="hover:underline" href="{% url 'account_email' %}">Change email</a>
             <form method="POST" action="{% url 'account_logout' %}">
                 {% csrf_token %}
-                <button type="submit"> Logout</button>
+                <button class="" type="submit"> Logout</button>
             </form>
             {% else %}
-            <a class = 'button primary text-sm' href="{% url 'account_login' %}">Log in</a>
+            <a class = 'button secondary text-sm' href="{% url 'account_login' %}">Log in</a>
+            <a class = 'button primary text-sm' href="{% url 'account_signup' %}">Sign up</a>
             {% endif %}
-        </li>
-    </ul>
+        </div>
 </nav>
 {% block content %}
 
