required changes done

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,6 +2,10 @@
 {% load widget_tweaks %}
 {% load allauth account %}
 
+{% block head_title %}
+Login
+{% endblock head_title %}
+
 {% block base_content %}
 <main class="max-w-lg mx-auto mt-10">
     <div class="flex felx-col bg-gray-800 text-white p-6 lg:p-16 rounded-md">
