--- a/templates/app/article_create.html
+++ b/templates/app/article_create.html
@@ -1,4 +1,8 @@
 {% extends "app/layouts/base_form.html" %}
+{% block head_title %}
+Create Article
+{% endblock head_title %}
+
 {% block buttons %}
 <div class="flex justify-end">
     <button class="button primary" type="submit"> Save</button>
