--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,6 +2,10 @@
 {% load widget_tweaks %}
 {% load allauth account %}
 
+{% block head_title %}
+Sign Up
+{% endblock head_title %}
+
 {% block base_content %}
 <main class="max-w-7xl mx-auto mt-10 lg:mt-20">
     <div class="flex flex-col items-center lg:flex-row lg:items-start space-y-6">
