--- a/templates/app/article_delete.html
+++ b/templates/app/article_delete.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block head_title %}
+Delete Article
+{% endblock head_title %}
+
 {% block base_content %}
 <main class="max-w-2xl mx-auto flex flex-col items-center mt-10">
 <h1 class="subtitle">Delete Article</h1>
