--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DjangoArticle</title>
+    <title>DjangoArticle | {% block head_title %}{% endblock head_title %}</title>
     <link rel="stylesheet" href="{% static 'output.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
+    {% block extra_head %}
+    {% endblock extra_head %}
 </head>
 <body>
+{% block body %}
 {% url 'create_article' as create_new_url %}
 {% url 'home' as your_articles_url %}
 {% url 'account_email' as change_email_url %}
@@ -39,9 +42,14 @@
         {% endif %}
     </div>
 </nav>
-{% block base_content %}
+<div class="p-2 md:p-4 lg:p-6">
+    {% block base_content %}
 
-{% endblock base_content %}
+    {% endblock base_content %}
+</div>
+{% endblock body %}
+{% block extra_body %}
+{% endblock extra_body %}
 
 {% block page_js %}
 
