--- a/templates/app/layouts/base_form.html
+++ b/templates/app/layouts/base_form.html
@@ -3,13 +3,15 @@
 {% load widget_tweaks %}
 {% block base_content %}
 <main class="max-w-7xl mx-auto mt-10">
-    <form method="POST">
+    <form method="POST" x-data="{
+    articleStatus: ''
+}">
         {% csrf_token %}
         <div class="mb-4">
         {% render_field form.title class="text-4xl w-full rounded-md border-2 border-gray-200 fouces:ring-1 focus:ring-emerald-500 focus:border-emerald-500 transition duration-200 ease-in-out" placeholder="Write a title for your article" %}
         </div>
             <div class="flex gap-10 mb-10 items-center">
-            {% render_field form.status class="text-xs border-none rounded-sm uppercase" %}
+            {% render_field form.status class="text-xs border-none rounded-sm uppercase" x-bind::class="`article-status-${articleStatus}`" x-model.fill="articleStatus" %}
             {% block article_stats %}
             {% endblock article_stats %}
         </div>
