--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'output.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
+
     {% block extra_head %}
     {% endblock extra_head %}
 </head>
