--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -15,6 +15,14 @@ Your Articles
 <a class="button primary inline-block mb-6 w-full sm:w-auto text-center" href="{% url 'create_article' %}">Create Article</a>
 
 <h2 class="subtitle mb-6">Your latest articles</h2>
+    <form method="GET" class="flex flex-col sm:flex-row gap-3 form-field">
+        <input class="text-black shadow-sm focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm border-gray-300 rounded-md" type="search" name="search" placeholder="Search articles" value="{{ request.GET.search }}">
+        <button class="flex gap-1 button secondary items-center justify-center" type="submit">
+            {% include "svgs/magnifier.svg" with class="w-6 h-6 mr-2" %}
+            Search
+        </button>
+        <a href="{% url 'home' %}" class="button secondary text-center">Clear search</a>
+    </form>
 {% if articles %}
 <ul>
     {% for article in articles %}
@@ -31,14 +39,14 @@ Your Articles
     {% if is_paginated %}
     <div class="flex flex-row items-center justify-center text-xl mt-6">
         {% if page_obj.has_previous %}
-            <a class="mx-2" href="?page={{ page_obj.previous_page_number }}">
+            <a class="mx-2" href="?page={{ page_obj.previous_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">
                 {% include "svgs/chevron-left.svg" with class="h-7 w-7 border border-black rounded-md p-1" %}
             </a>
 
         {% endif %}
         <span>Page {{ page_obj.number }} of {{ paginator.num_pages }}</span>
         {% if page_obj.has_next %}
-            <a class="mx-2" href="?page={{ page_obj.next_page_number }}">
+            <a class="mx-2" href="?page={{ page_obj.next_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">
                 {% include "svgs/chevron-right.svg" with class="h-7 w-7 border border-black rounded-md p-1" %}
             </a>
         {% endif %}
