--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -16,15 +16,22 @@ Your Articles
 
 <h2 class="subtitle mb-6">Your latest articles</h2>
     <form method="GET" class="flex flex-col sm:flex-row gap-3 form-field">
-        <input class="text-black shadow-sm focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm border-gray-300 rounded-md" type="search" name="search" placeholder="Search articles" value="{{ request.GET.search }}">
+        <input
+                class="text-black shadow-sm focus:ring-emerald-500 focus:border-emerald-500 sm:text-sm border-gray-300 rounded-md"
+                type="search" name="search" placeholder="Search articles" value="{{ request.GET.search }}"
+        hx-get="{{ request.path }}"
+        hx-trigger="input changed delay:500ms, search"
+        hx-target="#article-results"
+        hx-select="#article-resluts">
         <button class="flex gap-1 button secondary items-center justify-center" type="submit">
             {% include "svgs/magnifier.svg" with class="w-6 h-6 mr-2" %}
             Search
         </button>
-        <a href="{% url 'home' %}" class="button secondary text-center">Clear search</a>
+        <a href="{{ request.path }}" class="button secondary text-center">Clear search</a>
     </form>
+    <div id="article-results">
 {% if articles %}
-<ul>
+<ul preload="mouseover">
     {% for article in articles %}
     <li><a class="text-2xl flex items-center"
            href="{% url 'update_article' pk=article.id %}">
@@ -55,5 +62,6 @@ Your Articles
 {% else %}
 <p>There is no article to show at the moment.</p>
 {% endif %}
+        </div>
 </main>
 {% endblock base_content %}
