--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -22,9 +22,13 @@ Your Articles
         hx-get="{{ request.path }}"
         hx-trigger="input changed delay:500ms, search"
         hx-target="#article-results"
-        hx-select="#article-resluts">
-        <button class="flex gap-1 button secondary items-center justify-center" type="submit">
-            {% include "svgs/magnifier.svg" with class="w-6 h-6 mr-2" %}
+        hx-select="#article-results"
+        hx-indicator="svg.loading"
+        hx-disabled-elt="next button"
+        hx-push-url="true">
+        <button class="flex gap-1 button secondary items-center justify-center [&>.loading.htmx-request.hidden]:!inline-block [&>.loading.htmx-request]:hidden disabled:cursor-not-allowed disabled:opacity-50" type="submit">
+            {% include "svgs/magnifier.svg" with class="loading w-6 h-6 mr-2" %}
+            {% include "svgs/loading.svg" with class="loading w-6 h-6 mr-2 hidden motion-safe:animate-spin" %}
             Search
         </button>
         <a href="{{ request.path }}" class="button secondary text-center">Clear search</a>
