navigation bar styiing

--- a/static/input.css
+++ b/static/input.css
@@ -21,3 +21,7 @@
     @apply rounded-xl border border-red-400 bg-red-200 px-4 py-2 font-medium text-red-800 shadow-sm hover:bg-red-300 focus:outline-hidden focus:ring-red-200 focus:ring-offset-2;
 }
 }
+
+@theme {
+    --inset-shadow-underline: inset 0 -2px 0 0 #bdbdbd;
+}
