changes in homepage

--- a/static/input.css
+++ b/static/input.css
@@ -4,7 +4,15 @@
 @tailwind utilities;
 @plugin "@tailwindcss/typography";
 @plugin "@tailwindcss/forms";
+
 @layer base {
+.title {
+    @apply text-6xl font-semibold tracking-tight;
+}
+
+.subtitle {
+    @apply text-4xl  font-medium tracking-tight;
+}
 .button {
     @apply font-medium px-4  py-2 rounded-md;
 }
