--- a/templates/app/base.html
+++ b/templates/app/base.html
@@ -6,31 +6,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DjangoArticle</title>
-    <link rel="stylesheet" href = "{% static 'output.css' %}">
+    <link rel="stylesheet" href="{% static 'output.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
     <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 </head>
 <body>
+{% url 'create_article' as create_new_url %}
+{% url 'home' as your_articles_url %}
+{% url 'account_email' as change_email_url %}
 <nav class="px-10 py-4 border-b border-gray-300 shadow-md">
     <div class="flex justify-end items-center gap-6  max-w-7xl mx-auto">
-            {% if user.is_authenticated %}
-            <a class="button primary" href="{% url 'create_article' %}">Create new</a>
-            <a class="hover:inset-shadow-underline" href="{% url 'home' %}">Article</a>
-            <a class="hover:inset-shadow-underline" href="{% url 'account_email' %}">Change email</a>
-            <form method="POST" action="{% url 'account_logout' %}">
-                {% csrf_token %}
-                <button class="hover:inset-shadow-underline" type="submit"> Logout</button>
-            </form>
-            {% else %}
-            <a class = 'button secondary text-sm' href="{% url 'account_login' %}">Log in</a>
-            <a class = 'button primary text-sm' href="{% url 'account_signup' %}">Sign up</a>
-            {% endif %}
-        </div>
+        {% if user.is_authenticated %}
+        <a class="button primary"
+           href="{% spaceless %}{% if request.path != create_new_url %} {{ create_new_url }} {% else %} # {% endif %}{% endspaceless %}">
+            Create new
+        </a>
+        <a class="hover:inset-shadow-underline {% if request.path == your_articles_url %} font-semibold {% endif %}"
+           href="{{ your_articles_url }}">
+            Article
+        </a>
+        <a class="hover:inset-shadow-underline {% if request.path == change_email_url %} font-semibold {% endif %}"
+           href="{{ change_email_url }}">
+            Change email
+        </a>
+        <form method="POST" action="{% url 'account_logout' %}">
+            {% csrf_token %}
+            <button class="hover:inset-shadow-underline" type="submit"> Logout</button>
+        </form>
+        {% else %}
+        <a class='button secondary text-sm' href="{% url 'account_login' %}">Log in</a>
+        <a class='button primary text-sm' href="{% url 'account_signup' %}">Sign up</a>
+        {% endif %}
+    </div>
 </nav>
 {% block content %}
 
 {% endblock content %}
-<footer>Common footer for all templates</footer>
 
 {% block page_js %}
 
