--- a/static/input.css
+++ b/static/input.css
@@ -28,6 +28,18 @@
 .danger {
     @apply rounded-xl border border-red-400 bg-red-200 px-4 py-2 font-medium text-red-800 shadow-sm hover:bg-red-300 focus:outline-hidden focus:ring-red-200 focus:ring-offset-2;
 }
+.EasyMDEContainer, textarea {
+    @apply rounded-md border-gray-200 border-2 text-base leading-6;
+}
+
+.EasyMDEContainer .CodeMirror {
+    @apply !border-none !bg-inherit;
+}
+
+.EasyMDEContainer:has(textarea:focus) , textarea:focus {
+    @apply ring-1 ring-emerald-500 border-emerald-500 ;
+}
+
 }
 
 @theme {
