--- a/templates/app/layouts/base_form.html
+++ b/templates/app/layouts/base_form.html
@@ -1,8 +1,31 @@
 {% extends "app/base.html" %}
+
+{% load widget_tweaks %}
 {% block content %}
+<main class="max-w-7xl mx-auto mt-10">
+    <form method="POST">
+        {% csrf_token %}
+        <div class="mb-4">
+        {% render_field form.title class="text-4xl w-full rounded-md border-2 border-gray-200 fouces:ring-1 focus:ring-emerald-500 focus:border-emerald-500 transition duration-200 ease-in-out" placeholder="Write a title for your article" %}
+        </div>
+            <div class="flex gap-10 mb-10 items-center">
+            {% render_field form.status class="text-xs border-none rounded-sm uppercase" %}
+            {% block article_stats %}
+            {% endblock article_stats %}
+        </div>
+        <div class="mb-10">
+            {% render_field form.content rows=20 %}
+        </div>
+        <div class="mb-10">
+            <p class="text-xl font-semibold mb-2">{{ form.twitter_post.label }}</p>
+            {% render_field form.twitter_post rows=10 class="w-full rounded-md border-2 border-gray-200 text-base leading-6 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition duration-200 ease-in-out" %}
+        </div>
+        {% block buttons %}
 
-{% endblock content %}
-
+        {% endblock %}
+    </form>
+    {% endblock content %}
+</main>
 {% block page_js %}
 <script>
     const contentMarkdown = new EasyMDE({
@@ -12,5 +35,10 @@
     toolbar: false,
     forceSync: true
     });
+
+
+
+
+
 </script>
 {% endblock page_js %}
