all auth styling done, work in progress

--- a/static/input.css
+++ b/static/input.css
@@ -40,6 +40,9 @@
     @apply ring-1 ring-emerald-500 border-emerald-500 ;
 }
 
+.form-field input {
+    @apply w-full rounded-md p-2;
+}
 }
 
 @theme {
