major changes done related to base html file,  work in progress

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,8 +1,8 @@
-{% extends "app/base.html" %}
+{% extends "base.html" %}
 {% load widget_tweaks %}
 {% load allauth account %}
 
-{% block content %}
+{% block base_content %}
 <main class="max-w-lg mx-auto mt-10">
     <div class="flex felx-col bg-gray-800 text-white p-6 lg:p-16 rounded-md">
         <div class="felx flex-col text-center">
@@ -14,7 +14,7 @@
             {% if form.errors %}
                 {% for field,errors in form.errors.items %}
                     {% for error in errors %}
-                        <div class="p-2 y-2 text-sm text-red-700 bg-red-50 rounded-md border-red-300 border">
+                        <div class="error">
                             {{ error }}
                         </div>
                     {% endfor %}
@@ -51,4 +51,4 @@
     </div>
 
 </main>
-{% endblock content %}
+{% endblock base_content %}
