--- a/templates/app/article_delete.html
+++ b/templates/app/article_delete.html
@@ -1,5 +1,5 @@
-{% extends "app/base.html" %}
-{% block content %}
+{% extends "base.html" %}
+{% block base_content %}
 <main class="max-w-2xl mx-auto flex flex-col items-center mt-10">
 <h1 class="subtitle">Delete Article</h1>
 <p class="text-lg">Are you sure you want to delete this "{{ articles.title }}"?</p>
@@ -12,4 +12,4 @@
     </a>
 </form>
 </main>
-{% endblock content %}
+{% endblock base_content %}
