--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,6 +1,6 @@
-{% extends "app/base.html" %}
+{% extends "base.html" %}
 {% load humanize %}
-{% block content %}
+{% block base_content %}
 <main class="max-w-7xl mx-auto mt-10 p-2 md:p-4 lg:p-10">
 <h1 class="title mb-4">
     Welcome
@@ -29,4 +29,4 @@
 <p>There is no article to show at the moment.</p>
 {% endif %}
 </main>
-{% endblock content %}
+{% endblock base_content %}
