--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
         {% endif %}
     </div>
 </nav>
-{% block content %}
+{% block base_content %}
 
-{% endblock content %}
+{% endblock base_content %}
 
 {% block page_js %}
 
