--- a/templates/app/layouts/base_form.html
+++ b/templates/app/layouts/base_form.html
@@ -1,7 +1,7 @@
-{% extends "app/base.html" %}
+{% extends "base.html" %}
 
 {% load widget_tweaks %}
-{% block content %}
+{% block base_content %}
 <main class="max-w-7xl mx-auto mt-10">
     <form method="POST">
         {% csrf_token %}
@@ -24,7 +24,7 @@
 
         {% endblock %}
     </form>
-    {% endblock content %}
+    {% endblock base_content %}
 </main>
 {% block page_js %}
 <script>
